fixed map z-index

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ main {
 #map-target {
   height: 100%;
   width: 100%;
+  z-index: 0;
 }
 
 /* data-panel styles */
